<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/add_percentage_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_percentage"
        android:textSize="24sp">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text="@string/initial_charge_tb_dummy_text"
        android:ems="10"
        android:id="@+id/add_new_percentage_tb"/>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/cancel_tipentry_bt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel_tipentry_bt_text"
            ></Button>
        <Button
            android:id="@+id/add_tipentry_bt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_percentage_bt_text"
            ></Button>
    </LinearLayout>
</LinearLayout>